# python-backend

./: mydata.db  users.csv
DATABASES/MYSQL/: Examples.md  Fundamentals.md
LEVEL-1/: Session2.md
LEVEL-3/: .gitignore  BuildInModules.md  ExceptionHandling.md  FileHandling.md  FunctionalProgramming.md  Functions.md  Packages.md  sample.py
LEVEL-3/PROJECTS/: data.txt  demo.txt  file-explorer-tool.py  file_processor.py  input.txt  main.py  mini_online_store_simulation.py  new.txt  random.csv  records.csv  story.txt  student_ops.py
LEVEL-3/PROJECTS/expense_tracker/: main.py
LEVEL-3/PROJECTS/expense_tracker/features/: add_expense.py
LEVEL-3/PROJECTS/expense_tracker/utils/: helpers.py
LEVEL-3/PROJECTS/my_package/: __init__.py  math_utils.py  string_utils.py  test.py
LEVEL-3/PROJECTS/my_testpackage/: main.py
LEVEL-3/PROJECTS/myproject/: pyproject.toml
LEVEL-3/PROJECTS/myproject/src/myproject/: hello.py
LEVEL-3/PROJECTS/task_manager/core/: validator.py
LEVEL-4/: Basic-2.md  Basics-1.md  Exampl.java  Fundamentals-1.md  Fundamentals-2.md  OOPS-1.md  OOPS-2.md  OOPS-3.md  Session-1.md  Testing.md
LEVEL-4/mypackage/: Test.java
NOTES/: JupyterNoteBook_Intro.md  Session1.md  Session3.md
