[project]
name = "myproject"
version = "0.1.0"
description = ""
authors = [
    {name = "anil-k-rajamoni18",email = "anil.k.rajamoni99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pendulum (>=3.1.0,<4.0.0)",
    "numpy (==2.2.0)"
]

[tool.poetry]
packages = [{include = "myproject", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
